corrected alignment

--- a/scripts/tree/css/tree.css
+++ b/scripts/tree/css/tree.css
@@ -58,7 +58,7 @@
 }
 
 .node-ul {
-	padding-left: 15px;
+	padding-left: 20px;
 }
 
 .node-hover {
